* added sane init script for server  * mauvesend now handles options better  * jabber client has stub message receivng method

--- a/mauveserver.conf
+++ b/mauveserver.conf
@@ -7,26 +7,47 @@
 server {
   # persistent data store, only sqlite3 supported at the moment
   database "sqlite3:///var/lib/mauvealert/alerts.db"
+
+  listener {
+    ip "0.0.0.0"
+    port 32741
+  }
   
-  # you probably want to listen on all addresses
-  ip "0.0.0.0"
-  # UDP port number
-  port 32741
-
-  # logging options
-  log_file "/var/log/mauveserver.log"
-  # 0 is debug, 1 is info, 2 is warning 
-  log_level 1
-
   # default is probably more than enough!
   #transmission_id_expire_time 600
 
   # few options for web interface, just the TCP port number
   web_interface {
+    ip "0.0.0.0"
     port 1288
+    document_root  "/usr/share/mauvealert"
   }
 }
 
+logger {
+
+  default_format "%d [ %6.6l ] [ %12.12c ] %m"
+
+#  outputter("stdout") {
+#    level    Log4r::DEBUG
+#  }
+
+  outputter("file") {
+    filename "/var/log/mauve/mauveserver.log"
+    trunc    false
+    level    Log4r::DEBUG
+  }
+
+  outputter("email") {
+    server       "outgoing.mx.bytemark.co.uk"
+    subject      "Mauve logger output"
+    from         "#{ENV['USER']}@#{Socket.gethostname}"
+    to           "patrick@bytemark.co.uk"
+    domain       "test.mauve.bytemark.co.uk"
+    level        Log4r::WARN
+  }
+
+}
 
 notification_method("email") {
   # email address to send from
