See debian/changelog

--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,15 @@ Depends: mauvealert-common,
  libsinatra-ruby1.8,
  libuuidtools-ruby1.8,
  libwebrick-ruby1.8,
+ libdm-core-ruby1.8,
+ libdm-do-adapter-ruby1.8,
+ libdm-migrations-ruby1.8,
+ libdm-serializer-ruby1.8,
  libdm-sqlite-adapter-ruby1.8,
+ libdo-sqlite3-ruby1.8,
+ libdm-timestamps-ruby1.8,
+ libdm-types-ruby1.8,
+ libdm-validations-ruby1.8,
  thin1.8,
  libxmpp4r-ruby1.8,
  ${misc:Depends}
