--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Matthew Bloch <matthew@bytemark.co.uk>
 Uploaders: Patrick J Cherry <patrick@bytemark.co.uk>
 Section: ruby
 Priority: optional
-Build-Depends: ruby1.8, debhelper, cdbs, rdoc
+Build-Depends: ruby1.8, debhelper, cdbs, rdoc, txt2man
 Standards-Version: 3.8.0
 
 Package: mauvealert-client
@@ -12,7 +12,7 @@ Depends: ruby1.8,
   mauvealert-common,
   ${misc:Depends}
 Description: Mauve network alert system -- client
-  mauve is a network alert system for system and network administrators.  You
+ Mauve is a network alert system for system and network administrators.  You
  can use it to quickly set up ad-hoc monitoring for a variety of services, and
  to confidently replace all scripts that might otherwise send floods of emails
  or text messages.
@@ -45,7 +45,7 @@ Depends: mauvealert-common,
  ${misc:Depends}
 Suggests: mauvealert-client
 Description: Mauve network alert system -- server
- mauve is a network alert system for system and network administrators.  You can
+ Mauve is a network alert system for system and network administrators.  You can
  use it to quickly set up ad-hoc monitoring for a variety of services, and to
  confidently replace all scripts that might otherwise send floods of emails or
  text messages.
@@ -57,7 +57,7 @@ Architecture: all
 Depends: ruby1.8, ruby-protobuf, ${misc:Depends}
 Suggests: mauvealert-client
 Description: Mauve network alert system -- common libraries
- mauve is a network alert system for system and network administrators.  You can
+ Mauve is a network alert system for system and network administrators.  You can
  use it to quickly set up ad-hoc monitoring for a variety of services, and to
  confidently replace all scripts that might otherwise send floods of emails or
  text messages.
