Big commit  * Added manpages for all binaries  * Added log-reopening for mauvealert-server, and logrotate snippet  * mauveserver now adds a user on install, and runs as that user  * Big logging tidy-up  * Alert subjects are only overwritten by the source, when the subject in the databse is empty  * Removed various attr_writer methods that were being redifined  * Added a notes box to the acknowledge form, but this doesn't work yet

--- a/mauveserver.conf
+++ b/mauveserver.conf
@@ -5,7 +5,9 @@
 # The service which listens for alert messages
 #
 server {
+  # 
   # persistent data store, only sqlite3 supported at the moment
+  #
   database "sqlite3:///var/lib/mauvealert/alerts.db"
 
   listener {
@@ -14,7 +16,7 @@ server {
   }
   
   # default is probably more than enough!
-  #transmission_id_expire_time 600
+  # transmission_id_expire_time 600
 
   # few options for web interface, just the TCP port number
   web_interface {
@@ -28,44 +30,49 @@ logger {
 
   default_format "%d [ %6.6l ] [ %12.12c ] %m"
 
+  outputter("file") {
+    filename "/var/log/mauvealert/mauvealert.log"
+    trunc    false
+    level    Log4r::INFO
+  }
+
 #  outputter("stdout") {
 #    level    Log4r::DEBUG
 #  }
 
-  outputter("file") {
-    filename "/var/log/mauve/mauveserver.log"
-    trunc    false
-    level    Log4r::DEBUG
-  }
-
-  outputter("email") {
-    server       "outgoing.mx.bytemark.co.uk"
-    subject      "Mauve logger output"
-    from         "#{ENV['USER']}@#{Socket.gethostname}"
-    to           "patrick@bytemark.co.uk"
-    domain       "test.mauve.bytemark.co.uk"
-    level        Log4r::WARN
-  }
+#  outputter("email") {
+#    server       "localhost"
+#    subject      "Mauve logger output"
+#    from         "mauvealert@localhost"
+#    to           "boring@localhost"
+#    domain       "localhost"
+#    level        Log4r::WARN
+#  }
 
 }
 
 notification_method("email") {
+  #
   # email address to send from
+  #
   from "mauvealert@" + `hostname`.chomp
-  # smarthost
-  server "localhost"
-  # add this to the subject of any emails we send
-  subject_prefix "[mauve] "
 
-  # for testing, enable this
-  #deliver_to_file "/tmp/alerts.txt"  
+  #
+  # outbound smtp host
+  #
+  server "localhost"
+
+  # 
+  # add this to the subject of any emails we send
+  #
+  subject_prefix "[mauvealert]"
 }
 
 # How to log into a jabber server
 #
 # notification_method("xmpp") {
-#   jid "mauvealert@jabber.org/olympus"
-#   password "WojIsEv8ScaufOm1"
+#   jid "mauvealert@chat.example.com/boo"
+#   password "x"
 # }
 
 # How to notify by SMS - we use aql.com, you'll need to write a module
@@ -86,12 +93,6 @@ notification_method("email") {
 # alert levels.  You probably want more people, see below for a more complete
 # example.
 # 
-# Passwords are generated like so:
-# ruby-1.8.7-p72 > require 'digest/sha1'                                                                                                                          
-# => true                                                                                                                                                         
-# ruby-1.8.7-p72 > sha1 = Digest::SHA1.hexdigest('my new super secure and easy to type on phone password')
-# => "729cf161621400fa63fcb3b4750441390fbface2"
-#
 person("root") {
   all { email("root@localhost") }
 }
@@ -148,6 +149,7 @@ person("root") {
 #   }
 # }
 
+#
 # Default notification - tell root about all alerts every hour
 # 
 alert_group {
