--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Matthew Bloch <matthew@bytemark.co.uk>
 Uploaders: Patrick J Cherry <patrick@bytemark.co.uk>
 Section: ruby
 Priority: optional
-Build-Depends: ruby1.8, debhelper, cdbs, rdoc, txt2man
+Build-Depends: ruby1.8, debhelper, cdbs, rdoc, txt2man, cdbs
 Standards-Version: 3.8.0
 
 Package: mauvealert-client
@@ -24,7 +24,7 @@ Architecture: all
 Pre-Depends: libjs-jquery
 Depends: mauvealert-common,
  adduser,
- ruby1.8,
+ ruby1.8 (>= 1.8.7),
  libhaml-ruby1.8,
  liblog4r-ruby1.8,
  libredcloth-ruby1.8,
