--- a/debian/rules
+++ b/debian/rules
@@ -1,14 +1,8 @@
 #!/usr/bin/make -f
 #
-
-build:
-	make all
-	dh $@
-	
-clean:
-	make clean
-	dh $@
-
-%:
-	dh $@
+# Use CDBS, so we can build for etch (ugh)
+#
+  
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/makefile.mk
 
