--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Pre-Depends: libjs-jquery
 Depends: mauvealert-common,
  adduser,
  ruby1.8 (>= 1.8.7),
- libhaml-ruby1.8,
+ libhaml-ruby1.8 || haml,
  liblog4r-ruby1.8,
  libredcloth-ruby1.8,
  librmail-ruby1.8,
@@ -41,7 +41,7 @@ Depends: mauvealert-common,
  libdm-timestamps-ruby1.8,
  libdm-types-ruby1.8,
  libdm-validations-ruby1.8,
- thin1.8,
+ thin1.8 || thin,
  libxmpp4r-ruby1.8,
  ${misc:Depends}
 Suggests: mauvealert-client
