* Rejigged configuration  * Added --test and --verbose flags for the server config  * Started proper test suite  * Config parsing now gives more sensible errors + backtrace  * Rejigged people and source lists

--- a/example.conf
+++ b/example.conf
@@ -151,13 +151,13 @@ logger {
     level    Log4r::DEBUG
   }
 
-  outputter("email") {
-    server       "smtp.example.com"
-    subject      "Mauve logger output"
-    from         "#{ENV['USER']}@#{Socket.gethostname}"
-    to           "awooga@example.com"
-    level        Log4r::WARN
-  }
+#  outputter("email") {
+#    server       "smtp.example.com"
+#    subject      "Mauve logger output"
+#    from         "#{ENV['USER']}@#{Socket.gethostname}"
+#    to           "awooga@example.com"
+#    level        Log4r::WARN
+#  }
 
 }
 
