Updated package dependencies.

--- a/debian/control
+++ b/debian/control
@@ -30,14 +30,14 @@ Depends: mauvealert-common (>= 3.4.0),
  libdm-sqlite-adapter-ruby1.8 (>= 1.2.0),
  libdm-types-ruby1.8 (>= 1.2.0),
  libdm-validations-ruby1.8 (>= 1.2.0),
- libhaml-ruby1.8,
+ libhaml-ruby1.8 (>= 3.0.15) | haml (>= 3.0.15),
  liblog4r-ruby1.8,
  libredcloth-ruby1.8,
  librmail-ruby1.8,
  libsanitize-ruby1.8 (>= 2.0.3),
  libsinatra-ruby1.8 (>= 1.0),
  ruby1.8 (>= 1.8.7),
- thin1.8 (>= 1.2.11),
+ thin1.8 (>= 1.2.11) | thin (>= 1.2.11),
  libxmpp4r-ruby1.8,
  ${misc:Depends}
 Suggests: mauvealert-client
