Added lsb-base dependency

--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Depends: mauvealert-common (>= 3.4.0),
  librmail-ruby1.8,
  libsanitize-ruby1.8 (>= 2.0.3),
  libsinatra-ruby1.8 (>= 1.0),
+ lsb-base (>= 3.2-14),
  ruby1.8 (>= 1.8.7),
  thin1.8 (>= 1.2.11) | thin (>= 1.2.11),
  libxmpp4r-ruby1.8,
