Updated example.conf to work

--- a/example.conf
+++ b/example.conf
@@ -5,7 +5,7 @@ server {
   #
   # This is where our database lives.  SQLite is the default.
   #
-  database "sqlite3://./alerts.db"
+  database "sqlite3::memory:"
 
   #
   # This is our hostname.  It gets used when URLs are generated, and in the heartbeat alert.
@@ -27,7 +27,7 @@ server {
     #
     # This is how long the UDP server will sleep between looking for packets.
     # 
-    sleep_interval 1
+    poll_every 1
   }
   
 
@@ -40,7 +40,7 @@ server {
     # This is the length of time the processor will sleep between checking for
     # new packets from the UDP listener.
     #
-    sleep_interval 1
+    poll_every 1
 
     #
     # In order to make sure the same transmission isn't received more then
@@ -65,23 +65,12 @@ server {
     #
     # This is where the template files live.
     #
-    document_root     "/usr/share/mauvealert/"
+    # document_root     "/usr/share/mauvealert/"
 
     #
     # This is used in the cookie, to prevent session-stealing.
     #
     session_secret    "PLEASE CHANGE ME"
-  }
-
-  #
-  # The timer checks for alerts set to be raised/cleared in the future, or
-  # alert reminders, and triggers notifications thereof.
-  #
-  timer {
-    #
-    # This determines how often the timer thread checks for new reminders/notifications
-    #
-    sleep_interval 1
   }
 
 
@@ -98,7 +87,7 @@ server {
     #
     # This is how long to wait before the alert is raised
     #
-    raise_at    600
+    raise_after    600
     #
     # These two fields have sensible defaults set, but more informative
     # messages can be set here.
@@ -165,10 +154,10 @@ logger {
 # XMPP instant messaging.  This are the credentials to log into the XMPP
 # account that mauve will use.
 #
-notification_method ("xmpp") {
-  jid      "mauve@chat.example.com/mauve"
-  password "mauvespassword"
-}
+#notification_method ("xmpp") {
+#  jid      "mauve@chat.example.com/mauve"
+#  password "mauvespassword"
+#}
 
 #
 # Email messaging.
@@ -180,8 +169,8 @@ notification_method ("email") {
 }
 
 person("office_chat") {
-  xmpp "muc:mauve-test@conference.chat.bytemark.co.uk/MauveAlert"
-  all { xmpp }
+#  xmpp "muc:mauve-test@conference.chat.bytemark.co.uk/MauveAlert"
+#  all { xmpp }
 # suppress_notifications_after(310 => 1.minute)
 }
 
