Big update.  * Max acknowledgement time is now specified in the config  * Calendar interface improved.  * holiday_url no longer used -- replaced by notify_when_on_holiday!  * added notify_when_off_sick!  * Added ability for the calendar to be queried for a list of bank holdays.  * Added ability for Time to be given a list of bank holidays to check against.  * PeopleLists can now be a Proc, allowing downloading of lists  * Person is no longer a struct  * Moved the method_missing bit into ObjectBuilder from various sub classes.  * Added tests for the calendar interface  * Updated tests in other bits.

--- a/example.conf
+++ b/example.conf
@@ -5,12 +5,17 @@ server {
   #
   # This is where our database lives.  SQLite is the default.
   #
-  database "sqlite3::memory:"
+
+  # database "sqlite3::memory:"
+  database    "postgres://localhost/mauvealert"
 
   #
   # This is our hostname.  It gets used when URLs are generated, and in the heartbeat alert.
   #
   hostname "mauve.example.com"
+
+#  use_packet_buffer "no"
+#  use_notification_buffer "no"
 
   #
   # This is the UDP listener.
@@ -27,7 +32,7 @@ server {
     #
     # This is how long the UDP server will sleep between looking for packets.
     # 
-    poll_every 1
+    poll_every 0
   }
   
 
@@ -40,7 +45,7 @@ server {
     # This is the length of time the processor will sleep between checking for
     # new packets from the UDP listener.
     #
-    poll_every 1
+    poll_every 0
 
     #
     # In order to make sure the same transmission isn't received more then
@@ -78,23 +83,23 @@ server {
   # This is where the mauve server sends its own heartbeat.  Useful for
   # watching the watcher.
   #
-  heartbeat {
+#  heartbeat {
     #
     # If no destination is specified, then the contents of
     # /etc/mauvealert/mauvesend.destination are used.
     #
-    destination "localhost"
+#    destination "localhost"
     #
     # This is how long to wait before the alert is raised
     #
-    raise_after    600
+#    raise_after    600
     #
     # These two fields have sensible defaults set, but more informative
     # messages can be set here.
     #
-    summary     "Mauve alert server is down"
-    detail      "The Mauve alert server has failed to send a heartbeat"
-  }
+#    summary     "Mauve alert server is down"
+#    detail      "The Mauve alert server has failed to send a heartbeat"
+#  }
 
 }
 
@@ -137,7 +142,7 @@ logger {
   outputter("file") {
     filename "/tmp/mauveserver.log"
     trunc    true 
-    level    Log4r::DEBUG
+    level    Log4r::INFO
   }
 
 #  outputter("email") {
@@ -154,33 +159,21 @@ logger {
 # XMPP instant messaging.  This are the credentials to log into the XMPP
 # account that mauve will use.
 #
-#notification_method ("xmpp") {
-#  jid      "mauve@chat.example.com/mauve"
-#  password "mauvespassword"
-#}
-
-#
-# Email messaging.
-#
-notification_method ("email") {
-  server         "localhost"
-  from           "mauve@desk1.tur.bytemark.co.uk"
-  subject_prefix "mauve-test"
+# XMPP instant messaging.
+notification_method ("xmpp") {
+  jid "bytemark@chat.bytemark.co.uk/pjc-test"
+  password "OsPzCmqSb"
 }
 
 person("office_chat") {
-#  xmpp "muc:mauve-test@conference.chat.bytemark.co.uk/MauveAlert"
-#  all { xmpp }
-# suppress_notifications_after(310 => 1.minute)
+  xmpp "muc:mauve-test@conference.chat.bytemark.co.uk/MauveAlert"
+  all { xmpp }
+ suppress_notifications_after(310 => 1.minute)
 }
 
 person ("pcherry") {
   password '82da4c33e3a5ae9e51def466745e2c8965fa1476'
   all { true }
-}
-
-people_list ("arse") {
-  list [ "office_chat" ] 
 }
 
 # 
@@ -189,7 +182,7 @@ people_list ("arse") {
 alert_group("default") {
   level URGENT 
 
-  notify("arse") {
+  notify("office_chat") {
     every 2.minutes
   }
 }
