--- a/example.conf
+++ b/example.conf
@@ -5,17 +5,12 @@ server {
   #
   # This is where our database lives.  SQLite is the default.
   #
-
-  # database "sqlite3::memory:"
-  database    "postgres://localhost/mauvealert"
+  database "sqlite3::memory:"
 
   #
   # This is our hostname.  It gets used when URLs are generated, and in the heartbeat alert.
   #
   hostname "mauve.example.com"
-
-#  use_packet_buffer "no"
-#  use_notification_buffer "no"
 
   #
   # This is the UDP listener.
@@ -32,7 +27,7 @@ server {
     #
     # This is how long the UDP server will sleep between looking for packets.
     # 
-    poll_every 0
+    poll_every 1
   }
   
 
@@ -45,7 +40,7 @@ server {
     # This is the length of time the processor will sleep between checking for
     # new packets from the UDP listener.
     #
-    poll_every 0
+    poll_every 1
 
     #
     # In order to make sure the same transmission isn't received more then
@@ -83,23 +78,23 @@ server {
   # This is where the mauve server sends its own heartbeat.  Useful for
   # watching the watcher.
   #
-#  heartbeat {
+  heartbeat {
     #
     # If no destination is specified, then the contents of
     # /etc/mauvealert/mauvesend.destination are used.
     #
-#    destination "localhost"
+    destination "localhost"
     #
     # This is how long to wait before the alert is raised
     #
-#    raise_after    600
+    raise_after    600
     #
     # These two fields have sensible defaults set, but more informative
     # messages can be set here.
     #
-#    summary     "Mauve alert server is down"
-#    detail      "The Mauve alert server has failed to send a heartbeat"
-#  }
+    summary     "Mauve alert server is down"
+    detail      "The Mauve alert server has failed to send a heartbeat"
+  }
 
 }
 
@@ -142,7 +137,7 @@ logger {
   outputter("file") {
     filename "/tmp/mauveserver.log"
     trunc    true 
-    level    Log4r::INFO
+    level    Log4r::DEBUG
   }
 
 #  outputter("email") {
@@ -159,21 +154,33 @@ logger {
 # XMPP instant messaging.  This are the credentials to log into the XMPP
 # account that mauve will use.
 #
-# XMPP instant messaging.
-notification_method ("xmpp") {
-  jid "bytemark@chat.bytemark.co.uk/pjc-test"
-  password "OsPzCmqSb"
+#notification_method ("xmpp") {
+#  jid      "mauve@chat.example.com/mauve"
+#  password "mauvespassword"
+#}
+
+#
+# Email messaging.
+#
+notification_method ("email") {
+  server         "localhost"
+  from           "mauve@desk1.tur.bytemark.co.uk"
+  subject_prefix "mauve-test"
 }
 
 person("office_chat") {
-  xmpp "muc:mauve-test@conference.chat.bytemark.co.uk/MauveAlert"
-  all { xmpp }
- suppress_notifications_after(310 => 1.minute)
+#  xmpp "muc:mauve-test@conference.chat.bytemark.co.uk/MauveAlert"
+#  all { xmpp }
+# suppress_notifications_after(310 => 1.minute)
 }
 
 person ("pcherry") {
   password '82da4c33e3a5ae9e51def466745e2c8965fa1476'
   all { true }
+}
+
+people_list ("arse") {
+  list [ "office_chat" ] 
 }
 
 # 
@@ -182,7 +189,7 @@ person ("pcherry") {
 alert_group("default") {
   level URGENT 
 
-  notify("office_chat") {
+  notify("arse") {
     every 2.minutes
   }
 }
