--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Matthew Bloch <matthew@bytemark.co.uk>
 Uploaders: Patrick J Cherry <patrick@bytemark.co.uk>
 Section: ruby
 Priority: optional
-Build-Depends: ruby1.8, debhelper, cdbs, rdoc, txt2man, cdbs, libsetup-ruby1.8
+Build-Depends: ruby1.8, debhelper, cdbs, rdoc, txt2man, cdbs, libsetup-ruby1.8 | ruby-setup 
 Standards-Version: 3.9.1
 
 Package: mauvealert-client
@@ -25,21 +25,21 @@ Architecture: all
 Pre-Depends: libjs-jquery
 Depends: mauvealert-common (>= 3.8.0),
  adduser,
- libdm-core-ruby1.8 (>= 1.2.0),
- libdm-migrations-ruby1.8 (>= 1.2.0),
- libdm-sqlite-adapter-ruby1.8 (>= 1.2.0),
- libdm-types-ruby1.8 (>= 1.2.0),
- libdm-validations-ruby1.8 (>= 1.2.0),
- libhaml-ruby1.8 (>= 3.0.15) | haml (>= 3.0.15),
- liblog4r-ruby1.8,
- libredcloth-ruby1.8,
- librmail-ruby1.8,
- libsanitize-ruby1.8 (>= 2.0.3),
- libsinatra-ruby1.8 (>= 1.0),
+ libdm-core-ruby1.8 (>= 1.2.0) | ruby-dm-core  (>= 1.2.0),
+ libdm-migrations-ruby1.8 (>= 1.2.0) | ruby-dm-migrations  (>= 1.2.0),
+ libdm-sqlite-adapter-ruby1.8 (>= 1.2.0) | ruby-dm-sqlite-adapter  (>= 1.2.0),
+ libdm-types-ruby1.8 (>= 1.2.0) | ruby-dm-types  (>= 1.2.0),
+ libdm-validations-ruby1.8 (>= 1.2.0) | ruby-dm-validations  (>= 1.2.0),
+ libhaml-ruby1.8 (>= 3.0.15) | haml (>= 3.0.15) | ruby-haml  (>= 3.0.15) | haml (>= 3.0.15),
+ liblog4r-ruby1.8 | ruby-log4r,
+ libredcloth-ruby1.8 | ruby-redcloth,
+ librmail-ruby1.8 | ruby-rmail,
+ libsanitize-ruby1.8 (>= 2.0.3) | ruby-sanitize  (>= 2.0.3),
+ libsinatra-ruby1.8 (>= 1.0) | ruby-sinatra  (>= 1.0),
  lsb-base (>= 3.2-14),
  ruby1.8 (>= 1.8.7),
- thin1.8 | thin,
- libxmpp4r-ruby1.8,
+ thin1.8 | thin | ruby-thin,
+ libxmpp4r-ruby1.8 | ruby-xmpp4r,
  ${misc:Depends}
 Suggests: mauvealert-client
 Recommends: liblocale-ruby1.8 | ruby-locale
