Updated debian dependencies

--- a/debian/control
+++ b/debian/control
@@ -34,6 +34,7 @@ Depends: mauvealert-common (>= 3.8.0),
  ruby-haml (>= 3.0.15)    | libhaml-ruby1.8 (>= 3.0.15) | haml (>= 3.0.15),
  ruby-sanitize (>= 2.0.3) | libsanitize-ruby1.8 (>= 2.0.3),
  ruby-sinatra (>= 1.0)    | libsinatra-ruby1.8 (>= 1.0),
+ ruby-ipaddress | libipaddresss-ruby1.8,
  ruby-log4r    | liblog4r-ruby1.8,
  ruby-redcloth | libredcloth-ruby1.8,
  ruby-rmail    | librmail-ruby1.8,
