Added dependency on dm-transactions

--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,8 @@ Depends: mauvealert-common (>= 3.8.0),
  ruby-dm-sqlite-adapter (>= 1.2.0) | libdm-sqlite-adapter-ruby1.8 (>= 1.2.0),
  ruby-dm-types (>= 1.2.0)          | libdm-types-ruby1.8 (>= 1.2.0),
  ruby-dm-aggregates (>= 1.2.0)     | libdm-aggregates-ruby1.8 (>= 1.2.0),
- ruby-dm-validations (>= 1.2.0)    | libdm-validations-ruby1.8 (>= 1.2.0) ,
+ ruby-dm-validations (>= 1.2.0)    | libdm-validations-ruby1.8 (>= 1.2.0),
+ ruby-dm-transactions (>= 1.2.0)   | libdm-transactions-ruby1.8 (>= 1.2.0),
  ruby-haml (>= 3.0.15)    | libhaml-ruby1.8 (>= 3.0.15) | haml (>= 3.0.15),
  ruby-sanitize (>= 2.0.3) | libsanitize-ruby1.8 (>= 2.0.3),
  ruby-sinatra (>= 1.0)    | libsinatra-ruby1.8 (>= 1.0),
