Added an SMS provider for clockworksms.com

--- a/etc/mauveserver.conf
+++ b/etc/mauveserver.conf
@@ -75,14 +75,24 @@ notification_method("email") {
 #   password "x"
 # }
 
-# How to notify by SMS - we use aql.com, you'll need to write a module
-# to use any other provider.
+# How to notify by SMS - we use aql.com, a provider for clockworksms.com
+# is also provided. For another provider, you'll need to write a module.
 #
 # notification_method("sms") {
 #   provider "AQL"
 # 
 #   username "x"
 #   password "x"
+#   from "01234567890"
+#
+#   # Maximum number of SMS messages to concatenate for one notification
+#   max_messages_per_alert 3
+# }
+#
+# notification_method("sms") {
+#   provider "Clockwork"
+# 
+#   apikey "sssseeeeeeccccccccrrrrreeeeeettttsssssss"
 #   from "01234567890"
 #
 #   # Maximum number of SMS messages to concatenate for one notification
