Fixed up sample config slightly to fit modern Mauve

--- a/etc/mauveserver.conf
+++ b/etc/mauveserver.conf
@@ -111,16 +111,20 @@ person("root") {
 #
 # person("johnny") {
 #
-#   # Johnny wants waking up 24/7 if anything urgent happens
-#   urgent { sms("07111222333") }
+#   sms "07111222333"
+#   email "johnny@example.com"
+#   xmpp "johnny@example.com.jabber.org"
 #
-#   # Email him for anything that's not urgent
-#   normal { email("johnny@example.com") }
+#   # Johnny wants waking up 24/7 if anything urgent happens
+#   urgent { sms }
+#
+#   # XMPP, or Email him for anything that's not urgent
+#   normal { xmpp or email }
 #
 #   # Anything else can just be a jabber message, which he might miss.
 #   # Email instead if he's unavailable/offline - but give it a try if
 #   # we don't know his status.
-#   low { xmpp("johnny@example.com.jabber.org", :if_presence => [:available, unknown]) || email("johnny@example.com") }
+#   low { xmpp("johnny@example.com.jabber.org", :if_presence => [:available, unknown]) || email }
 #
 #   # SMS messages are expensive, if we're sending more than 5 per minute,
 #   # tell the user we're going to stop until it slows down.
@@ -132,7 +136,10 @@ person("root") {
 # Archie is Johnny's boss
 #
 # person("archie") {
-#   all { email("archie@example.com") }
+#
+#   email "archie@example.com"
+#
+#   all { email }
 #
 #   # Don't spam Archie, if more than 3 messages per hour come in.
 #   suppress_notifications_after 3 => 1.hour
