--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Matthew Bloch <matthew@bytemark.co.uk>
 Uploaders: Patrick J Cherry <patrick@bytemark.co.uk>
 Section: ruby
 Priority: optional
-Build-Depends: ruby1.8, debhelper, cdbs, rdoc, txt2man, cdbs, libsetup-ruby1.8 | ruby-setup 
+Build-Depends: ruby | ruby-interpreter, debhelper, cdbs, rdoc, txt2man, cdbs, libsetup-ruby1.8 | ruby-setup 
 Standards-Version: 3.9.1
 
 Package: mauvealert-client
