--- a/example.conf
+++ b/example.conf
@@ -32,7 +32,7 @@ server {
   
 
   #
-  # This is the processing thread, which reveives packets, and updates the
+  # This is the processing thread, which recieves packets, and updates the
   # database as needed.
   #
   processor {
