Added xml2-dev to test environment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ test:jessie: &test
   variables:
     DISTRO: jessie
   script:
+    - apt-get install libxml2-dev
     - bundle install -j $(nproc) --path vendor/bundle --binstubs
     - bundle exec rake test:unit
 
