--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ test:jessie: &test
   script:
     - apt-get install libxml2-dev libxslt1-dev libpq-dev postgresql-server-dev-9.4 libsqlite3-dev rake
     - bundle install -j $(nproc) --path vendor/bundle --binstubs
-    - bundle exec rake test:unit
+    - bundle exec rake test
 
 test:stretch:
   <<: *test
