Added haml-contrib for the textile filter; updated debian packaging a little

--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Maintainer: Matthew Bloch <matthew@bytemark.co.uk>
 Uploaders: Patrick J Cherry <patrick@bytemark.co.uk>
 Section: ruby
 Priority: optional
-Build-Depends: ruby | ruby-interpreter, debhelper, cdbs, rdoc, txt2man, cdbs, libsetup-ruby1.8 | ruby-setup 
+Build-Depends: ruby | ruby-interpreter, debhelper, rdoc, txt2man, gem2deb, dh-systemd, ruby-setup 
 Standards-Version: 3.9.1
+XS-Ruby-Versions: all
 
 Package: mauvealert-client
 Architecture: all
@@ -25,24 +26,24 @@ Architecture: all
 Pre-Depends: libjs-jquery
 Depends: mauvealert-common (>= 3.8.0),
  adduser,
- ruby-dm-core (>= 1.2.0)           | libdm-core-ruby1.8 (>= 1.2.0),
- ruby-dm-migrations (>= 1.2.0)     | libdm-migrations-ruby1.8 (>= 1.2.0),
- ruby-dm-sqlite-adapter (>= 1.2.0) | libdm-sqlite-adapter-ruby1.8 (>= 1.2.0),
- ruby-dm-types (>= 1.2.0)          | libdm-types-ruby1.8 (>= 1.2.0),
- ruby-dm-aggregates (>= 1.2.0)     | libdm-aggregates-ruby1.8 (>= 1.2.0),
- ruby-dm-validations (>= 1.2.0)    | libdm-validations-ruby1.8 (>= 1.2.0),
- ruby-dm-transactions (>= 1.2.0)   | libdm-transactions-ruby1.8 (>= 1.2.0),
- ruby-haml (>= 3.0.15)    | libhaml-ruby1.8 (>= 3.0.15) | haml (>= 3.0.15),
- ruby-sanitize (>= 2.0.3) | libsanitize-ruby1.8 (>= 2.0.3),
- ruby-sinatra (>= 1.0)    | libsinatra-ruby1.8 (>= 1.0),
- ruby-ipaddress | libipaddresss-ruby1.8,
- ruby-log4r    | liblog4r-ruby1.8,
- ruby-redcloth | libredcloth-ruby1.8,
- ruby-rmail    | librmail-ruby1.8,
- ruby-thin     | thin1.8 | thin,
- ruby-xmpp4r   | libxmpp4r-ruby1.8,
- lsb-base (>= 3.2-14),
- ruby1.8 (>= 1.8.7),
+ ruby-dm-core,
+ ruby-dm-migrations,
+ ruby-dm-sqlite-adapter,
+ ruby-dm-types,
+ ruby-dm-aggregates,
+ ruby-dm-validations,
+ ruby-dm-transactions,
+ ruby-haml,
+ ruby-haml-contrib,
+ ruby-sanitize,
+ ruby-sinatra,
+ ruby-ipaddress,
+ ruby-log4r,
+ ruby-redcloth,
+ ruby-rubymail,
+ ruby-thin,
+ lsb-base,
+ ruby | ruby-interpreter,
  ${misc:Depends}
 Suggests: mauvealert-client
 Recommends: ruby-locale | liblocale-ruby1.8
