--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,5 @@
 #!/usr/bin/make -f
-#
-# Use CDBS, so we can build for etch (ugh)
-#
   
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/makefile.mk
+%:
+	dh $@ --buildsystem=ruby --with ruby --with systemd
 
