Updated Gemfile to pull gems in Debian into a separate group

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,10 @@ test:jessie: &test
   variables:
     DISTRO: jessie
   before_script:
-    - apt-get install libpq-dev postgresql-server-dev-9.4 libsqlite3-dev rake ruby-log4r ruby-ipaddress ruby-json ruby-sanitize ruby-rubymail thin ruby-haml ruby-haml-contrib ruby-redcloth ruby-rack ruby-rack-protection ruby-rack-flash3 ruby-tilt ruby-sinatra ruby-locale ruby-rack-test ruby-webmock ruby-timecop ruby-test-unit
+    - apt install libpq-dev postgresql-server-dev-9.4
   script:
-    - bundle install -j $(nproc) --path vendor/bundle --without development,test
+    - apt install libsqlite3-dev rake ruby-log4r ruby-ipaddress ruby-json ruby-sanitize ruby-rubymail thin ruby-haml ruby-haml-contrib ruby-redcloth ruby-rack ruby-rack-protection ruby-rack-flash3 ruby-tilt ruby-sinatra ruby-locale ruby-rack-test ruby-webmock ruby-timecop ruby-test-unit
+    - bundle install -j $(nproc) --path vendor/bundle --without development
     - bundle exec rake test
 
 test:stretch:
@@ -19,7 +20,7 @@ test:stretch:
   variables:
     DISTRO: stretch
   before_script:
-    - apt-get install libpq-dev postgresql-server-dev-9.6 libsqlite3-dev rake ruby-log4r ruby-ipaddress ruby-json ruby-sanitize ruby-rubymail thin ruby-haml ruby-haml-contrib ruby-redcloth ruby-rack ruby-rack-protection ruby-rack-flash3 ruby-tilt ruby-sinatra ruby-locale ruby-rack-test ruby-webmock ruby-timecop ruby-test-unit
+    - apt install libpq-dev postgresql-server-dev-9.6
 
 package:jessie: &package
   image: $CI_REGISTRY/docker-images/layers:$DISTRO-deb
