Add postgres headers.

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Uploaders: Patrick J Cherry <patrick@bytemark.co.uk>
 Section: ruby
 Priority: optional
 Build-Depends: ruby | ruby-interpreter, debhelper, rdoc, txt2man, dh-systemd,
- bundler, libsqlite3-dev, zlib1g-dev, libxml2-dev, ruby-dev, libpq-dev
+ bundler, libsqlite3-dev, zlib1g-dev, libxml2-dev, ruby-dev, libpq-dev,
+ postgresql-server-dev-9.4 | postgresql-server-dev-9.6
 Standards-Version: 3.9.1
 
 Package: mauvealert-server
