Don't install bundler with gem; run make

--- a/debian/rules
+++ b/debian/rules
@@ -8,13 +8,12 @@ export PATH     := ${GEM_HOME}/bin:${PATH}
 	dh $@ --with-systemd
 
 override_dh_auto_build:
-	gem install bundler
 	bundler install --deployment --without="test development" --jobs=4
+	make
 
 override_dh_clean:
 	dh_clean
 	$(RM) -r vendor/
-
 
 override_dh_auto_test:
 	echo "NOP"
